--- a/GenAI.html
+++ b/GenAI.html
@@ -21,17 +21,17 @@
     </div>
 
     <div class="app">
-        <h1>Đề xuất cách chăm sóc da mặt</h1>
+        <h1>Đề xuất cách chăm sóc Cây bệnh</h1>
         <div class="input-area">
             <input type="text" id="message-input" placeholder="Nhập loại da">
             <button id="send-button">Xác nhận</button>
         </div>
 
         <div class="output-area" style="display: none;">
-            <h3>Hướng dẫn chăm sóc da</h3>
+            <h3>Hướng dẫn chăm sóc Cây bệnh</h3>
             <ol class="output-instructions-list">
             </ol>
-            <h3>Các sản phẩm chăm sóc da tham khảo</h3>
+            <h3>Các sản phẩm chăm sóc Cây bệnh tham khảo</h3>
             <table class="output-products-table">
                 <tr>
                     <th>STT</th>
